--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -1,9 +1,5 @@
 # Controls when the action will run.
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 
 - name: Run latest-tag
   uses: EndBug/latest-tag@latest
