--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -1,5 +1,5 @@
 # Controls when the action will run.
-on: [push, workflow_dispatch]
+- on: [push, workflow_dispatch]
 
-name: Run latest-tag
-uses: EndBug/latest-tag@latest
+- name: Run latest-tag
+  uses: EndBug/latest-tag@latest
