--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -1,2 +1,25 @@
-- name: Run latest-tag
-  uses: EndBug/latest-tag@latest
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [main]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+name: Assign latest tag
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  latest_tag:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    name: "Assign latest tag"
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out
+        uses: actions/checkout@latest
+        with:
+          ref: src
+      # Make latest tag
+      - name: Run latest-tag
+        uses: EndBug/latest-tag@latest
