--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out
-        uses: actions/checkout@latest
+        uses: actions/checkout@v2
         with:
           ref: src
       # Make latest tag
