--- a/.github/workflows/latest-tag.yml
+++ b/.github/workflows/latest-tag.yml
@@ -15,6 +15,9 @@ jobs:
     name: "Assign latest tag"
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out
+        uses: actions/checkout@v2
       # Make latest tag
       - name: Run latest-tag
         uses: EndBug/latest-tag@latest
